Update with Javascript

--- a/veterinary/index.html
+++ b/veterinary/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Veterinary</title>
+  <script>document.documentElement.className += ' js';</script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -34,7 +35,7 @@
     </div>
   </header>
 
-  <section class="sobre" id="about">
+  <section class="sobre js-scroll" id="about">
     <div class="sobre-geral">
       <div class="sobre-info">
         <h1>First I wanted to be
@@ -53,7 +54,7 @@
     </div>
   </section>
 
-  <section class="sobre2" id="service">
+  <section class="sobre2 js-scroll" id="service">
     <div class="sobre2-geral">
       <div class="sobre2-info">
         <h2>First I wanted to be
@@ -72,7 +73,7 @@
   </section>
 
 
-  <section class="sobre-list">
+  <section class="sobre-list js-scroll">
     <div class="sobre-list-geral">
       <h1>Title Here</h1>
       <p>Lorem Ipsum available, but the majority have
@@ -103,7 +104,7 @@
     </div>
   </section>
 
-  <section class="sobre2">
+  <section class="sobre2 js-scroll">
     <div class="sobre2-geral">
       <div class="sobre2-img">
         <img src="img/dog3.jpg" alt="Dog 3">
@@ -123,7 +124,7 @@
   </section>
 
 
-  <section class="sobre-list">
+  <section class="sobre-list js-scroll">
     <div class="sobre-list-geral">
       <h1>Title Here</h1>
       <p>Lorem Ipsum available, but the majority have
@@ -164,7 +165,7 @@
   </section>
 
 
-  <section class="vet-list">
+  <section class="vet-list js-scroll">
     <div class="sobre-list-geral">
       <h1>The vetcare team</h1>
       <p>Lorem Ipsum available, but the majority have
@@ -199,7 +200,7 @@
   </section>
 
 
-  <section class="kpi">
+  <section class="kpi js-scroll">
     <div class="kpi-container">
       <div class="kpi-interno">
         <div class="kpi-itens">
@@ -223,7 +224,7 @@
     </div>
   </section>
 
-  <section class="vet-list">
+  <section class="vet-list js-scroll">
     <div class="sobre-list-geral">
       <h1>Recent Posts</h1>
       <p>Lorem Ipsum available, but the majority have
@@ -303,6 +304,7 @@
     </div>
   </footer>
 
+  <script src="script.js"></script>
 </body>
 
 </html>
